syntax = "proto3";
import "inboxservice/InboxMessages.proto";

option java_multiple_files = true;
option java_package = "com.baidu.bifromq.inbox.storage.proto";
option java_outer_classname = "InboxFetchedProtos";

package inboxservice;

message Fetched {
  enum Result {
    OK = 0;
    NO_INBOX = 1;
    TRY_LATER = 2;
    ERROR = 3;
  }
  Result result = 1;

  repeated InboxMessage qos0Msg = 2;

  repeated InboxMessage sendBufferMsg = 3;
}